--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morgan": "^1.9.1",
     "pg": "^8.11.1",
     "postgresql": "^0.0.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "stripe": "^12.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
